--- a/yes_style.css
+++ b/yes_style.css
@@ -22,7 +22,7 @@ body {
     max-width: 500px; 
     height: auto; 
 }
-button {
+#redirectToWA {
     font-size: 2.2em;
     padding: 10px 20px;
     margin-right: 10px;
