--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <main>
         {{ content }}
     </main>
+    ini laysoutt
 
     {% include footer.html %}
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
